
- wxMutex::IsLocked() doesn't exist any more and should have never existed:
  this is was unique example of a thread-unsafe-by-design method.


OTHER CHANGES
=============

2.4.3
-----

All:

- Spanish translations updated (Javier San Jose)

All (GUI):

- bug in wxWindow::RemoveEventHandler() fixed (Yingjun Zhang)
- bug in wxColourDatabase::FindColour() which could led to crashes fixed

wxMSW:

- strip ampersands from strings returned by wxMenuBar::GetLabelTop()
- fixed bug in wxIniConfig::DeleteEntry() (Parinya Thipchart)


2.4.2
-----

All:

- always NUL-terminate the log messages
- wxRegEx::Compile() now calculates the number of groups correctly
- wxHTTP::GetHeader() didn't find headers which were not all in upper case
- wxHTTP input stream didn't detect EOF correctly
- wxString::find_last_of() ignored "start" parameter (Robert Vazan)
- a bug in wxArrayString::Shrink() fixed (Gunnar Roth)
- added wxIPV4address::IPAddress()

All (GUI):

- rare crash in wxFontMapper fixed (Robert Vazan)
- added wxMenu::FindItemByPosition.
- copy wxImage options when copying the images

Generic:

- wxListCtrl: respect wxLC_NO_HEADER style when inserting first column

Unix:

- fixed build problems with OpenGL when libGL(U) were in different directories
- added --basename and --release flags to wx-config (Robert O'Connor)
- added support for GNU/Hurd in configure
- fixed wx-config --rezflags output on platforms different from Mac
- changed wxNativeFontInfo::FromXFontName to treat names with all
  components being empty or '*' as default font (since default font is
  converted to such a string by GetXFontName).
- wxLocale::Init now tries to set .utf8 locale in Unicode mode (Andreas Pflug)

wxGTK

- fixed compilation with --disable-compat-22
- set the event object correctly for wxMenu events (Bob Balfour)
- fixed memory leak in wxFileDialog (Christian Sturmlechner)

wxMSW:

- compilation fix for VC++ command line build (missing version.mak)